@@ -1,21 +1,0 @@
-The dateutil module provides powerful extensions to the standard datetime
-module.
-
-Features
-
-* Computing of relative deltas (next month, next year, next monday, last week
-  of month, etc);
-* Computing of relative deltas between two given date and/or datetime objects;
-* Computing of dates based on very flexible recurrence rules, using a superset
-  of the iCalendar specification. Parsing of RFC strings is supported as well.
-* Generic parsing of dates in almost any string format;
-* Timezone (tzinfo) implementations for tzfile(5) format files
-  (/etc/localtime, /usr/share/zoneinfo, etc), TZ environment string (in all
-  known formats), iCalendar format files, given ranges (with help from
-  relative deltas), local machine timezone, fixed offset timezone, and UTC
-  timezone.
-* Computing of Easter Sunday dates for any given year, using Western, Orthodox
-  or Julian algorithms;
-* More than 400 test cases.
-
-This package contains the Python-3.x version of the module.
